fixed navbar spacing

--- a/website/src/components/HeroSection.css
+++ b/website/src/components/HeroSection.css
@@ -21,13 +21,13 @@ video {
 }
 .hero-container > h1 {
   color: #fff;
-  margin: 50px;
-  font-size: 50px;
-  margin-top: 100px;
+  margin-left: 50px;
+  margin-top: 50px;
+  font-size: 50;
 }
 
 .hero-container > p {
-  margin-top: 8px;
+  margin-top: -20px;
   color: #fff;
   font-size: 32px;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 
